// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChoosePlan page tests should disable submit and plan picker when submitting 1`] = `
<form>
  <CenteredLogo />
  <Grid>
    <Grid.Column>
      <Panel>
        <_default
          disabled={true}
          onChange={[Function]}
          plans={Array []}
          selectedPromo={Object {}}
        />
        <AccessControl
          condition={[Function]}
        >
          <Panel.Section>
            <PromoCodeNew
              handlePromoCode={
                Object {
                  "applyPromoCode": [Function],
                  "clearPromoCode": undefined,
                }
              }
              key="promocode"
              promoCodeObj={
                Object {
                  "promoError": undefined,
                  "promoPending": false,
                  "selectedPromo": Object {},
                }
              }
            />
          </Panel.Section>
          <CreditCardSection
            billing={
              Object {
                "countries": Array [],
                "promoPending": false,
                "selectedPromo": Object {},
              }
            }
            submitting={true}
          />
        </AccessControl>
        <Panel.Section>
          <Button
            disabled={true}
            fullWidth={true}
            primary={true}
            size="large"
            type="submit"
          >
            Updating Subscription...
          </Button>
        </Panel.Section>
      </Panel>
    </Grid.Column>
  </Grid>
</form>
`;

exports[`ChoosePlan page tests should render correctly 1`] = `
<form>
  <CenteredLogo />
  <Grid>
    <Grid.Column>
      <Panel>
        <_default
          disabled={false}
          onChange={[Function]}
          plans={Array []}
          selectedPromo={Object {}}
        />
        <AccessControl
          condition={[Function]}
        >
          <Panel.Section>
            <PromoCodeNew
              handlePromoCode={
                Object {
                  "applyPromoCode": [Function],
                  "clearPromoCode": undefined,
                }
              }
              key="promocode"
              promoCodeObj={
                Object {
                  "promoError": undefined,
                  "promoPending": false,
                  "selectedPromo": Object {},
                }
              }
            />
          </Panel.Section>
          <CreditCardSection
            billing={
              Object {
                "countries": Array [],
                "promoPending": false,
                "selectedPromo": Object {},
              }
            }
            submitting={false}
          />
        </AccessControl>
        <Panel.Section>
          <Button
            disabled={false}
            fullWidth={true}
            primary={true}
            size="large"
            type="submit"
          >
            Get Started
          </Button>
        </Panel.Section>
      </Panel>
    </Grid.Column>
  </Grid>
</form>
`;

exports[`ChoosePlan page tests should render loading component 1`] = `<Loading />`;

exports[`ChoosePlan page tests should show free bullets when isFree is selected 1`] = `
<form>
  <CenteredLogo />
  <Grid>
    <Grid.Column>
      <Panel>
        <_default
          disabled={false}
          onChange={[Function]}
          plans={Array []}
          selectedPromo={Object {}}
        />
        <AccessControl
          condition={[Function]}
        >
          <CreditCardSection
            billing={
              Object {
                "countries": Array [],
                "promoPending": false,
                "selectedPromo": Object {},
              }
            }
            isPlanFree={true}
            submitting={false}
          />
        </AccessControl>
        <Panel.Section>
          <Button
            disabled={false}
            fullWidth={true}
            primary={true}
            size="large"
            type="submit"
          >
            Get Started
          </Button>
        </Panel.Section>
      </Panel>
    </Grid.Column>
  </Grid>
</form>
`;
